[package]
name = "acme-lib"
description = "Library for requesting certificates from an ACME provider."
license = "MIT"
repository = "https://github.com/algesten/acme-lib"
readme = "README.md"
version = "0.9.1"
authors = ["Martin Algesten <martin@algesten.se>"]
keywords = ["letsencrypt", "acme"]
categories = ["web-programming", "api-bindings"]
edition = "2018"

[dependencies]
base64 = "0.21.5"
lazy_static = "1"
log = "0.4"
openssl = { version = "0.10.32", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.1.45" }
ureq = "2"

[dev-dependencies]
env_logger = { version = "0.7", default-features = false }
futures = "0.1.25"
hyper = "0.12"
regex = "1.3"
